--- a/index.html
+++ b/index.html
@@ -74,6 +74,49 @@
                     <li class="box_li">lorem ipsum</li>
                 </ul>
             </div>
+            <ul class="main_ul_2">
+                <li class="main_li_2"><a href="#" class="main_a_1">Buyurtma berish</a>
+                </li>
+                <li class="main_li_2">
+                <a href="#" class="main_a_2">Xizmatlar sahifasiga o'tish</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="section_2">
+        <div class="container">
+            <ul class="s2_ul">
+                <li class="s2_li"><p class="s2_text_1">Biz qanday ishlaymiz?</p></li>
+                <li class="s2_li"><p class="s2_text_2">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget <br> sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p></li>
+            </ul>
+            <ul class="s2_box_ul">
+                <li class="s2_box_li"><img src="./img/step-illlustration.png" class="in_img img_5" alt="">
+                <ul class="in_ul">
+                    <li class="in_li"><p class="in_text">Talablarni aniqlab chiqamiz</p></li>
+                    <li class="in_li"><p class="in_text_">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. <br> Nam facilisis</p></li>
+                </ul></li>
+                <li class="s2_box_li"><ul class="in_ul">
+                    <li class="in_li next_li"><p class="in_text">Bir necha yechimlarni taklif qilamiz</p></li>
+                    <li class="in_li next_li"><p class="in_text_ in_4">Nullam laoreet nec turpis et ultrices. Duis sit amet <br> quam arcu. Nam facilisis</p></li>
+                </ul><img src="./img/step-illlustration (1).png" class="in_img img_6" alt=""></li>
+                <li class="s2_box_li"><img src="./img/step-illustration.png" class="in_img img_7" alt="">
+                    <ul class="in_ul">
+                        <li class="in_li"><p class="in_text">Loyiha uchun vaqt belgilaymiz</p></li>
+                        <li class="in_li"><p class="in_text_">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. <br> Nam facilisis</p></li>
+                    </ul>
+                </li>
+                <li class="s2_box_li"><ul class="in_ul">
+                    <li class="in_li next_li"><p class="in_text">Bir necha yechimlarni taklif qilamiz</p></li>
+                    <li class="in_li next_li"><p class="in_text_ in_4">Nullam laoreet nec turpis et ultrices. Duis sit amet <br> quam arcu. Nam facilisis</p></li>
+                </ul><img src="./img/step-illustration (1).png" class="in_img img_8" alt=""></li>
+                <li class="s2_box_li"><img src="./img/step-illustration (2).png" class="in_img img_9" alt="">
+                    <ul class="in_ul">
+                        <li class="in_li"><p class="in_text">Qo’llab-quvvatlab boramiz</p></li>
+                        <li class="in_li"><p class="in_text_">Nullam laoreet nec turpis et ultrices. Duis sit amet quam  arcu. Nam <br> facilisis</p></li>
+                    </ul>
+                </li>
+            </ul>
+            <a href="#" class="last_a">Buyurtma berish</a>
         </div>
     </section>
 </body>
